<resources>
    <string name="app_name">MadGenius</string>
    <string name="logo">MAD GENIUS</string>
    <string name="agility_mode">AGILITY MODE</string>
    <string name="scoreboard">SCOREBOARD</string>
    <string name="memory_mode">MEMORY MODE</string>
    <string name="exception_message">Must implement OnFragmentInteractionListener</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="memory_text">See results for Memory mode</string>
    <string name="agility_text">See results for Agility mode</string>
    <string name="best_memory">Best of Memory Mode:</string>
    <string name="best_agility">Best of Agility Mode:</string>
    <string name="button_details_text">Details</string>
    <string name="title_scoreboard">Scoreboard</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="write_username">Write your username to save your result:</string>
    <string name="save_result_message">Save result?</string>
    <string name="menu_image_desc">Lab glassware with liquids of different colors.</string>
    <string name="score_chart_title">Score Chart</string>
    <string name="score_chart_message_title">Detailed Score Chart</string>
    <string name="find_chart">Find Chart</string>
    <string name="save_username_checkbox">Save username?</string>
    <string name="username_hint">username...</string>
    <string name="score_chart_explanation">Enter your username to see detailed score charts of your performance</string>
    <string name="cancel">Cancel</string>
    <string name="username_checkbox">Save username for next games?</string>
    <string name="action_message">LET\'S DO IT!</string>
    <string name="placeholder_number_actions">Now you\'ll play with</string>
    <string name="congratulations_message">Congratulations! Right sequence!</string>
    <string name="clicking_image_desc">Person clicking button on their phone.</string>
    <string name="trophy_image_desc">Trophy might be displayed on this position.</string>
    <string name="login_title">Login</string>
    <string name="login_message">Create an username to save your game results</string>
    <string name="golden_trophy">Golden trophy</string>
    <string name="tutorial_scoreboard_title">4. Scoreboard</string>
    <string name="tutorial_physical_action_title">3. Physical actions</string>
    <string name="tutorial_seek_bar">SEEK bar, click or slide to the desired number position, its values go from 0 to 10.</string>
    <string name="tutorial_switch_button">SWITCH button, click it to change its value.</string>
    <string name="tutorial_button">An action may ask you to press a BUTTON of a specific color (Green, Yellow, Blue or Red).</string>
    <string name="tutorial_components_title">COMPONENTS</string>
    <string name="tutorial_points">Shows the collected points.</string>
    <string name="tutorial_points_title">POINTS</string>
    <string name="tutorial_time_bar">In the AGILITY MODE the time bar displays the time remaining for executing a task. In in MEMORY MODE it indicates the remaining amount of operations to be executed.</string>
    <string name="tutorial_time_bar_title">TIME BAR</string>
    <string name="tutorial_task_bar">The task bar displays the instruction to be executed, it may ask you to interact with one of the elements in the interface or to perform a physical action with your device.</string>
    <string name="tutorial_task_bar_title">TASK BAR</string>
    <string name="tutorial_interface_title">2. Interface and components</string>
    <string name="tutorial_agility_mode">Test your reflexes by quickly executing tasks with a time constraint. Each correct action performed gives you one point, but also increases the speed of the game. How many actions can you perform before making a mistake or running out of time?</string>
    <string name="tutorial_memory">Test you memory skills with this game mode! You will receive a series of instructions to memorize and repeat. As you progress, the series of instruction get longer, how many actions can you remember at the same time?</string>
    <string name="tutorial_title">MadGenius Tutorial</string>
    <string name="tutorial_game_modes_title">1. Game Modes</string>
    <string name="tutorial_physical_action">This a dynamic game, as previously said it may require you to perform physical actions with your phone. While playing you may be requested to: turn your phone upside down, shake your phone or to tap the front of your phone. The last action, \'tap the front of your phone\' involves the proximity sensor located on the top of your phone, the image below shows how to successfully perform this action.</string>
    <string name="tutorial_scoreboard">From the main menu you can click on SCOREBOARD to check rankings for both memory and agility game modes.</string>
    <string name="tutorial_personal_scores_title">5. Personal Scores</string>
    <string name="tutorial_personal_scores">After checking the top scores on the SCOREBOARD you can also dive deeper in the game statistics and see your own detailed performance on a graph by clicking DETAILS and entering your username.</string>
    <string name="check_the_scoreboard">Check the scoreboard</string>
    <string name="credits_label">CREDITS</string>
    <string name="credits_body">Developers: \n Gabriel Feranandes de Oliveira \n Ivan Fontana \n Pedro Henrique Barbosa de Almeida \n\n\n MadGenius is an open source game inspired in SpaceTeam. \n\n chemistry icon by surang, from flaticon.com \n trophy icon by freepik, from flaticon.com \n mind icon by Smashicons, from flaticon.com \n The sound effects used on the game were taken from https://opengameart.org</string>
    <string name="tutorial_button_desc">Tutorial button.</string>
    <string name="menu_ranking_desc">Ranking button</string>
</resources>
