<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2d406a"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".Tutorial">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/anton"
                android:gravity="center"
                android:text="@string/tutorial_title"
                android:textColor="#fcbf4a"
                android:textSize="42sp" />

            <TextView
                android:id="@+id/tutorial_sub1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="#fcbf4a"
                android:fontFamily="@font/anton"
                android:paddingStart="8dp"
                android:text="@string/tutorial_game_modes_title"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/anton"
                        android:text="@string/memory_mode"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/anton"
                        android:text="@string/tutorial_memory"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/anton"
                        android:text="@string/agility_mode"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/anton"
                        android:text="@string/tutorial_agility_mode"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tutorial_sub2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="#fcbf4a"
                android:fontFamily="@font/anton"
                android:paddingStart="8dp"
                android:text="@string/tutorial_interface_title"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#242323"
                app:srcCompat="@drawable/tutorial_screen" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/anton"
                    android:text="@string/tutorial_task_bar_title"
                    android:gravity="right"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/anton"
                    android:text="@string/tutorial_task_bar"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/anton"
                    android:text="@string/tutorial_time_bar_title"
                    android:gravity="right"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/anton"
                    android:text="@string/tutorial_time_bar"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/anton"
                    android:text="@string/tutorial_points_title"
                    android:gravity="right"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/anton"
                    android:text="@string/tutorial_points"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/anton"
                    android:text="@string/tutorial_components_title"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <Button
                        android:id="@+id/greenButton"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:layout_width="@dimen/fragment_dimension"
                        android:layout_height="@dimen/fragment_dimension"
                        android:background="@android:color/holo_green_dark" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/anton"
                    android:text="@string/tutorial_button"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <Switch
                        android:id="@+id/mSwitch"
                        android:layout_width="@dimen/fragment_dimension"
                        android:layout_height="@dimen/fragment_dimension"
                        android:scaleX="1"
                        android:scaleY="1"
                        android:switchMinWidth="60dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/anton"
                    android:text="@string/tutorial_switch_button"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <SeekBar
                        android:id="@+id/seekBar"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="@dimen/fragment_dimension"
                        android:layout_height="@dimen/fragment_dimension"
                        android:layout_gravity="center_vertical"
                        android:max="3" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/anton"
                    android:text="@string/tutorial_seek_bar"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tutorial_sub3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="#fcbf4a"
                android:fontFamily="@font/anton"
                android:paddingStart="8dp"
                android:text="@string/tutorial_physical_action_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:text="@string/tutorial_physical_action"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/proximity" />

            <TextView
                android:id="@+id/tutorial_sub4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="#fcbf4a"
                android:fontFamily="@font/anton"
                android:paddingStart="8dp"
                android:text="@string/tutorial_scoreboard_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:text="@string/tutorial_scoreboard"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tutorial_sub5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="#fcbf4a"
                android:paddingStart="8dp"
                android:fontFamily="@font/anton"
                android:text="@string/tutorial_personal_scores_title"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:text="@string/tutorial_personal_scores"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/credits_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="#fcbf4a"
                android:fontFamily="@font/anton"
                android:paddingStart="8dp"
                android:text="@string/credits_label"
                android:textAlignment="center"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/credits_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:text="@string/credits_body"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>