<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2d406a"
    tools:context=".Menu">

    <TextView
        android:id="@+id/txt_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/anton"
        android:text="@string/logo"
        android:textColor="#fcbf4a"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/anton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_scoreboards"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_agility"
            style="@style/styled_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agility_mode"
            android:onClick="agility_onClick"
            android:layout_margin="8dp"
            />

        <Button
            android:id="@+id/btn_memory"
            style="@style/styled_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="memory_onClick"
            android:text="@string/memory_mode"
            android:layout_margin="8dp"
            />
    </LinearLayout>


    <Button
        android:id="@+id/btn_scoreboards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="scoreboard_onClick"
        android:text="@string/scoreboard"
        style="@style/styled_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:contentDescription="@string/menu_image_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloTextView"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/chemistry" />
</androidx.constraintlayout.widget.ConstraintLayout>